# rust-github-action-poc

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: local_action_test.yml
src/: main.rs
